--- a/tsconfig-all.json
+++ b/tsconfig-all.json
@@ -39,6 +39,7 @@
         { "path": "packages/color-loupe" },
         { "path": "packages/color-slider" },
         { "path": "packages/color-wheel" },
+        { "path": "packages/combobox" },
         { "path": "packages/dialog" },
         { "path": "packages/divider" },
         { "path": "packages/dropzone" },
