feat(combobox): wip

--- a/package.json
+++ b/package.json
@@ -68,12 +68,12 @@
         "storybook:build": "build-storybook -o projects/documentation/dist/storybook",
         "storybook:quick": "run-p watch:css build:watch storybook:run",
         "storybook:run": "web-dev-server --config wds-storybook.config.js",
-        "test": "yarn test:focus unit",
+        "test": "yarn test:focus unit --coverage",
         "test:bench": "node test/benchmark/cli.cjs",
         "test:changed": "node ./tasks/test-changes.js",
         "test:ci": "yarn test:start",
         "test:create": "node test/visual/create.js",
-        "test:focus": "yarn build && yarn test:ci --coverage --group",
+        "test:focus": "yarn build && yarn test:ci --group",
         "test:start": "web-test-runner",
         "test:visual": "yarn test:visual:ci",
         "test:visual:ci": "yarn test:start --group",
