--- a/packages/combobox/package.json
+++ b/packages/combobox/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "@spectrum-web-components/picker-button",
+    "name": "@spectrum-web-components/combobox",
     "version": "0.0.1",
     "publishConfig": {
         "access": "public"
     },
-    "description": "Web component implementation of a Spectrum design PickerButton",
+    "description": "",
     "license": "Apache-2.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/adobe/spectrum-web-components.git",
-        "directory": "packages/picker-button"
+        "directory": "packages/combobox"
     },
     "author": "",
-    "homepage": "https://adobe.github.io/spectrum-web-components/components/picker-button",
+    "homepage": "https://adobe.github.io/spectrum-web-components/components/combobox",
     "bugs": {
         "url": "https://github.com/adobe/spectrum-web-components/issues"
     },
@@ -22,20 +22,22 @@
     "exports": {
         ".": "./src/index.js",
         "./src/*": "./src/*.js",
+        "./custom-elements.json": "./custom-elements.json",
         "./package.json": "./package.json",
-        "./sp-picker-button": "./sp-picker-button.js",
-        "./sp-picker-button.js": "./sp-picker-button.js"
+        "./sp-combobox": "./sp-combobox.js",
+        "./sp-combobox.js": "./sp-combobox.js",
+        "./sp-combobox-item": "./sp-combobox-item.js",
+        "./sp-combobox-item.js": "./sp-combobox-item.js"
     },
     "scripts": {
         "test": "echo \"Error: run tests from mono-repo root.\" && exit 1"
     },
     "files": [
-        "**/*.d.ts",
-        "**/*.js",
-        "**/*.js.map",
-        "custom-elements.json",
-        "!stories/",
-        "!test/"
+        "*.d.ts",
+        "*.js",
+        "*.js.map",
+        "/src/",
+        "custom-elements.json"
     ],
     "keywords": [
         "spectrum css",
@@ -44,16 +46,23 @@
         "lit-html"
     ],
     "dependencies": {
+        "@spectrum-web-components/action-button": "^0.10.0",
         "@spectrum-web-components/base": "^0.7.0",
+        "@spectrum-web-components/icon": "^0.12.0",
         "@spectrum-web-components/icons-ui": "^0.9.0",
+        "@spectrum-web-components/menu": "^0.16.0",
+        "@spectrum-web-components/overlay": "^0.18.0",
+        "@spectrum-web-components/picker-button": "^0.0.1",
+        "@spectrum-web-components/popover": "^0.12.0",
+        "@spectrum-web-components/textfield": "^0.13.0",
         "tslib": "^2.0.0"
     },
     "devDependencies": {
-        "@spectrum-css/pickerbutton": "^1.1.22"
+        "@spectrum-css/inputgroup": "^4.0.22"
     },
     "types": "./src/index.d.ts",
-    "customElements": "custom-elements.json",
     "sideEffects": [
-        "./sp-*.js"
+        "./sp-*.js",
+        "./sp-*.ts"
     ]
 }
