--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -95,7 +95,7 @@
         "tslib": "^2.0.0"
     },
     "devDependencies": {
-        "@spectrum-css/menu": "^4.0.4"
+        "@spectrum-css/menu": "5.0.0-beta.0"
     },
     "types": "./src/index.d.ts",
     "customElements": "custom-elements.json",
