feat(action-bar): use core tokens

--- a/packages/action-bar/package.json
+++ b/packages/action-bar/package.json
@@ -58,10 +58,11 @@
     ],
     "dependencies": {
         "@spectrum-web-components/base": "^0.7.0",
+        "@spectrum-web-components/button": "^0.19.5",
         "@spectrum-web-components/popover": "^0.12.6"
     },
     "devDependencies": {
-        "@spectrum-css/actionbar": "^4.0.1"
+        "@spectrum-css/actionbar": "^5.0.0"
     },
     "types": "./src/index.d.ts",
     "customElements": "custom-elements.json",
