--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
         "preeleventy": "yarn docs:analyze",
         "prelerna-publish": "yarn get-ready && yarn custom-element-json && yarn build:confirm",
         "prepare": "husky install",
-        "prestorybook": "cem analyze --outdir .storybook/",
-        "prestorybook:build": "cem analyze --outdir .storybook/",
+        "prestorybook": "cem analyze --outdir storybook/ && yarn build",
+        "prestorybook:build": "cem analyze --outdir storybook/",
         "pretest:bench": "test -f test/benchmark/cli.js ||:",
         "pretest:visual": "yarn build && yarn build",
         "process-icons": "run-p icons icons:ui icons:workflow",
@@ -62,8 +62,8 @@
         "spectrum-tokens": "node ./scripts/spectrum-tokens.js",
         "spectrum-vars": "node ./scripts/spectrum-vars.js",
         "start": "yarn storybook",
-        "storybook": "yarn build && yarn storybook:quick",
-        "storybook:build": "build-storybook -o projects/documentation/dist/storybook",
+        "storybook": "storybook dev -p 6006 -c storybook",
+        "storybook:build": "storybook build -o projects/documentation/dist/storybook -c storybook",
         "storybook:quick": "run-p build:watch storybook:run",
         "storybook:run": "web-dev-server --config wds-storybook.config.js",
         "test": "yarn test:focus unit",
@@ -103,6 +103,13 @@
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@sindresorhus/slugify": "^2.1.1",
         "@spectrum-web-components/eslint-plugin": "file:./linters/eslint",
+        "@storybook/addon-a11y": "^7.0.0-beta.43",
+        "@storybook/addon-essentials": "^7.0.0-beta.43",
+        "@storybook/addon-links": "^7.0.0-beta.43",
+        "@storybook/addon-storysource": "^7.0.0-beta.43",
+        "@storybook/builder-vite": "^7.0.0-beta.43",
+        "@storybook/web-components": "^7.0.0-beta.43",
+        "@storybook/web-components-vite": "^7.0.0-beta.43",
         "@types/chai": "^4.1.7",
         "@types/command-line-args": "^5.0.0",
         "@types/command-line-usage": "^5.0.1",
@@ -115,7 +122,6 @@
         "@typescript-eslint/parser": "^5.35.0",
         "@web/dev-server": "^0.1.35",
         "@web/dev-server-rollup": "^0.3.19",
-        "@web/dev-server-storybook": "^0.5.4",
         "@web/rollup-plugin-copy": "^0.3.0",
         "@web/rollup-plugin-html": "^1.11.0",
         "@web/test-runner": "^0.15.0",
@@ -141,6 +147,7 @@
         "eslint-plugin-lit-a11y": "^2.2.2",
         "eslint-plugin-notice": "^0.9.10",
         "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-storybook": "^0.6.10",
         "express": "^4.16.4",
         "fast-glob": "^3.2.12",
         "fs-extra": "^10.0.0",
@@ -152,6 +159,7 @@
         "lerna": "^6.0.1",
         "lit": "^2.5.0",
         "lit-analyzer": "^1.2.1",
+        "lit-html": "^2.4.0",
         "mocha-junit-reporter": "^2.0.2",
         "netlify-cli": "^12.9.2",
         "node-fetch": "^3.1.0",
@@ -172,9 +180,12 @@
         "pretty-bytes": "^5.6.0",
         "pretty-quick": "^3.1.3",
         "re-template-tag": "^2.0.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "rimraf": "^3.0.2",
         "rollup": "^2.78.0",
         "sinon": "^14.0.0",
+        "storybook": "^7.0.0-beta.43",
         "stylelint": "^14.9.1",
         "stylelint-config-prettier": "^9.0.3",
         "stylelint-config-standard": "^28.0.0",
@@ -182,6 +193,7 @@
         "tar-stream": "^3.0.0",
         "terser": "^4.8.1",
         "typescript": "^4.7.2",
+        "vite": "^4.1.1",
         "yargs": "^17.2.1"
     },
     "resolutions": {
