refactor: leverage colorjs.io instead of tiny color

--- a/tools/reactive-controllers/package.json
+++ b/tools/reactive-controllers/package.json
@@ -72,6 +72,7 @@
         "reactive controllers"
     ],
     "dependencies": {
+        "colorjs.io": "^0.4.2",
         "lit": "^2.5.0"
     },
     "types": "./src/index.d.ts",
