--- a/packages/slider/package.json
+++ b/packages/slider/package.json
@@ -83,7 +83,7 @@
         "@spectrum-web-components/theme": "^0.14.13"
     },
     "devDependencies": {
-        "@spectrum-css/slider": "^3.1.12"
+        "@spectrum-css/slider": "^4.0.0-beta.4"
     },
     "types": "./src/index.d.ts",
     "customElements": "custom-elements.json",
