--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -94,7 +94,7 @@
         "@spectrum-web-components/shared": "^0.15.5"
     },
     "devDependencies": {
-        "@spectrum-css/menu": "^4.0.11"
+        "@spectrum-css/menu": "^5.0.0-beta.1"
     },
     "types": "./src/index.d.ts",
     "customElements": "custom-elements.json",
