--- a/projects/documentation/package.json
+++ b/projects/documentation/package.json
@@ -29,6 +29,7 @@
         "@11ty/eleventy": "^2.0.0",
         "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
         "@fullhuman/postcss-purgecss": "^4.1.3",
+        "@lit-labs/eleventy-plugin-lit": "^1.0.0",
         "@open-wc/building-rollup": "^2.2.1",
         "@playwright/test": "^1.30.0",
         "@rollup/plugin-alias": "^3.1.9",
@@ -59,7 +60,7 @@
         "rollup-plugin-styles": "^4.0.0",
         "rollup-plugin-visualizer": "^5.5.4",
         "rollup-plugin-workbox": "^6.2.0",
-        "wireit": "^0.9.0"
+        "wireit": "^0.9.5"
     },
     "sideEffects": [
         "_site/**/*.css",
@@ -84,9 +85,6 @@
         "build:assets": {
             "dependencies": [
                 {
-                    "script": "build:tsc"
-                },
-                {
                     "script": "build:move-css"
                 },
                 {
@@ -97,7 +95,10 @@
         "build:eleventy": {
             "command": "eleventy --config=.eleventy.cjs --incremental --quiet",
             "dependencies": [
-                "copy-docs"
+                "copy-docs",
+                {
+                    "script": "build:tsc"
+                }
             ],
             "files": [
                 "./content/**/*.md",
