--- a/package.json
+++ b/package.json
@@ -100,8 +100,8 @@
         "@netlify/build": "^29.1.0",
         "@open-wc/dev-server-hmr": "^0.1.3",
         "@open-wc/testing": "^3.1.7",
-        "@rollup/plugin-commonjs": "^21.0.1",
-        "@rollup/plugin-json": "^5.0.0",
+        "@rollup/plugin-commonjs": "^24.0.1",
+        "@rollup/plugin-json": "^6.0.0",
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@sindresorhus/slugify": "^2.1.1",
         "@spectrum-web-components/eslint-plugin": "file:./linters/eslint",
@@ -116,14 +116,14 @@
         "@types/webpack-env": "^1.13.9",
         "@typescript-eslint/eslint-plugin": "^5.35.0",
         "@typescript-eslint/parser": "^5.35.0",
-        "@web/dev-server": "^0.1.38",
-        "@web/dev-server-rollup": "^0.4.1",
-        "@web/dev-server-storybook": "^0.6.2",
-        "@web/rollup-plugin-copy": "^0.3.0",
-        "@web/rollup-plugin-html": "^1.11.1",
-        "@web/test-runner": "^0.15.3",
-        "@web/test-runner-commands": "^0.6.6",
-        "@web/test-runner-junit-reporter": "^0.5.2",
+        "@web/dev-server": "0.0.0-canary-20230416222938",
+        "@web/dev-server-rollup": "0.0.0-canary-20230416222938",
+        "@web/dev-server-storybook": "0.0.0-canary-20230416222938",
+        "@web/rollup-plugin-copy": "0.0.0-canary-20230416222938",
+        "@web/rollup-plugin-html": "0.0.0-canary-20230416222938",
+        "@web/test-runner": "0.0.0-canary-20230416222938",
+        "@web/test-runner-commands": "0.0.0-canary-20230416222938",
+        "@web/test-runner-junit-reporter": "0.0.0-canary-20230416222938",
         "@web/test-runner-playwright": "^0.9.0",
         "@web/test-runner-visual-regression": "^0.7.1",
         "@webcomponents/webcomponentsjs": "^2.8.0",
@@ -177,7 +177,7 @@
         "pretty-quick": "^3.1.3",
         "re-template-tag": "^2.0.1",
         "rimraf": "^3.0.2",
-        "rollup": "^2.78.0",
+        "rollup": "^3.19.1",
         "sinon": "^14.0.0",
         "stylelint": "^14.9.1",
         "stylelint-config-prettier": "^9.0.3",
@@ -188,6 +188,14 @@
         "typescript": "^4.7.2",
         "wireit": "^0.9.5",
         "yargs": "^17.2.1"
+    },
+    "resolutions": {
+        "@web/dev-server": "0.0.0-canary-20230416222938",
+        "@web/dev-server-core": "0.0.0-canary-20230416222938",
+        "@web/dev-server-rollup": "0.0.0-canary-20230416222938",
+        "@web/dev-server-storybook": "0.0.0-canary-20230416222938",
+        "@web/rollup-plugin-html": "0.0.0-canary-20230416222938",
+        "@web/test-runner": "0.0.0-canary-20230416222938"
     },
     "wireit": {
         "build:css:watch": {
