--- a/packages/number-field/package.json
+++ b/packages/number-field/package.json
@@ -68,7 +68,7 @@
     },
     "devDependencies": {
         "@formatjs/intl-numberformat": "7.1.4",
-        "@spectrum-css/stepper": "^4.0.0-beta.4"
+        "@spectrum-css/stepper": "^4.0.3"
     },
     "types": "./src/index.d.ts",
     "customElements": "custom-elements.json",
