--- a/packages/thumbnail/package.json
+++ b/packages/thumbnail/package.json
@@ -60,7 +60,7 @@
         "@spectrum-web-components/base": "^0.7.5"
     },
     "devDependencies": {
-        "@spectrum-css/thumbnail": "^2.0.23"
+        "@spectrum-css/thumbnail": "^3.0.0-beta.0"
     },
     "types": "./src/index.d.ts",
     "customElements": "custom-elements.json",
