--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -64,7 +64,7 @@
         "@spectrum-web-components/textfield": "^0.13.14"
     },
     "devDependencies": {
-        "@spectrum-css/search": "^5.0.3"
+        "@spectrum-css/search": "6.0.0-beta.0"
     },
     "types": "./src/index.d.ts",
     "customElements": "custom-elements.json",
